@@ -3688,6 +3688,7 @@ GEN     nfgcd(GEN P, GEN Q, GEN nf, GEN den);
 GEN     nfgcd_all(GEN P, GEN Q, GEN T, GEN den, GEN *Pnew);
 int     nfissquarefree(GEN nf, GEN x);
 GEN     nfroots(GEN nf,GEN pol);
+GEN     nfroots_if_split(GEN *pnf, GEN pol);
 GEN     polfnf(GEN a, GEN t);
 GEN     rootsof1(GEN x);
 GEN     rootsof1_kannan(GEN nf);
