@@ -36,6 +36,7 @@ Done for version 2.8.1 (released ??/??/2016):
    19- [libpari] upr_norm
    20- [libpari] bid_get_fact, bid_get_ind, bid_get_sarch, bid_get_sprk
    21- [libpari] qfbforms
+   22- [libpari] nfroots_if_split
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
